package fr.univparis.azul;

public interface PlayerBoardObserver {
    public void update();
}
