package fr.univparis.azul.area;

import fr.univparis.azul.tile.*;

public interface IndexedArea extends Area {

  public void add(int index, Tile tile);

}
