package fr.univparis.azul.area;

public abstract class PlayerArea {
  
}
