package fr.univparis.azul.area;

public class Trash extends OffSideArea {
  
}
