package fr.univparis.azul.area;

import fr.univparis.azul.tile.*;

public interface UnindexedArea extends Area {

  public void add(Tile tile);
}
