package fr.univparis.azul.model;


public class HumanPlayer extends Player {

  public HumanPlayer(String name, Game.GameBoard g) {
    super(name, g);
  }

}
