package fr.univparis.azul.tile;
public abstract class SpecialTile extends Tile {
  public abstract void effect();

}
