package fr.univparis.azul.tile;
public abstract class Tile {
  
}
